Add shopping and recipe endpoint.
